--- a/book.toml
+++ b/book.toml
@@ -7,3 +7,18 @@ title = "OpenFoam® Handbook"
 
 [output.html]
 mathjax-support = true
+git-repository-url = "https://github.com/Adige-Calculations/OpenFOAM-handbook"
+edit-url-template = "https://github.com/Adige-Calculations/OpenFOAM-handbook/tree/main/{path}"
+
+[output.html.playground]
+editable = true
+line-numbers = true
+
+[output.html.search]
+limit-results = 20
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 2
+boost-paragraph = 1
+expand = true
+heading-split-level = 2
